syntax = "proto3";

package greeter;

option go_package = "github.com/okharch/greeter";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayTime (EmptyRequest) returns (HelloReply) {} // returns current time
}

message HelloRequest {
  string name = 1;
}

message EmptyRequest {
}

message HelloReply {
  string message = 1;
}

